Submit and Resubmit component

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@ testrun/*
 /challenge.xlsx
 /entrybot.robot
 /sales_results.pdf
+/merged
+/receipts
+/screenshots
+/log.html
+/output.xml
+/report.html
